--- a/template/about.html
+++ b/template/about.html
@@ -8,10 +8,10 @@
             <div class="col-12">
                 <h2>About Us</h2>
             </div>
-            <div class="col-12">
+            <!-- <div class="col-12">
                 <a href="">Home</a>
                 <a href="">About Us</a>
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
@@ -66,25 +66,30 @@
             <div class="col-lg-6">
                 <div class="about-img">
                     <img src="/static/img/about.jpg" alt="Image">
-                    <button type="button" class="btn-play" data-toggle="modal" data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-target="#videoModal">
-                        <span></span>
-                    </button>
+                    
                 </div>
             </div>
             <div class="col-lg-6">
                 <div class="about-content">
                     <div class="section-header">
                         <p>About Us</p>
-                        <h2>Cooking Since 1990</h2>
+                        <h2>Cooking Is Passion</h2>
                     </div>
                     <div class="about-text">
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem.
+                            Founded with love for flavors and a vision for transforming the way you enjoy meals, HaveliFLAVOURS
+                            is more than just a food delivery platform. It's celebration of diverse cuisines,fresh ingredients, and 
+                            the joy of sharing exceptional meals with you.
                         </p>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem. Curabitur non nisl nec nisi scelerisque maximus. Aenean consectetur convallis porttitor. Aliquam interdum at lacus non blandit.
+                            We believe in the power of quality ingredients. That's why we meticulously source the finest meats,
+                            and the most flavourful spices. Explore the world flavour with our diverse menu inspired by global
+                            and local cuisines.
                         </p>
-                        <a class="btn custom-btn" href="">Book A Table</a>
+                        <p>
+                            Our userfriendly platform and intuitive design make it easy for you to explore our menu, customize
+                            your orders, and enjoy the convenience of doorstep delivery.
+                        </p>
                     </div>
                 </div>
             </div>
