--- a/template/index.html
+++ b/template/index.html
@@ -83,7 +83,7 @@
                                 <p>
                                     We believe in the power of quality ingredients. That's why we meticulously source the finest meats,
                                     and the most flavourful spices. Explore the world flavour with our diverse menu inspired by global
-                                    andd local cuisines.
+                                    and local cuisines.
                                 </p>
                                 <p>
                                     Our userfriendly platform and intuitive design make it easy for you to explore our menu, customize
@@ -323,7 +323,7 @@
                             </div>
                             <div class="team-text">
                                 <h2>Adam Phillips</h2>
-                                <p>CEO, Co Founder</p>
+                                <p>Master Chef</p>
                             </div>
                         </div>
                     </div>
