--- a/template/all_dishes.html
+++ b/template/all_dishes.html
@@ -5,12 +5,12 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h2>{% if dish_category %} {{dish_category}} {% else %}Dishes {% endif %}({{dishes|length}})</h2>
+                <h2>{% if dish_category %} {{dish_category}} {% else %}Dishes {% endif %}</h2>
             </div>
-            <div class="col-12">
+            <!-- <div class="col-12">
                 <a href="/">Home</a>
                 <a href="/dishes">Dishes</a>
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
