--- a/template/contact.html
+++ b/template/contact.html
@@ -12,10 +12,10 @@
                     <div class="col-12">
                         <h2>Contact Us</h2>
                     </div>
-                    <div class="col-12">
+                    <!-- <div class="col-12">
                         <a href="">Home</a>
                         <a href="">Contact</a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -37,7 +37,7 @@
                             </div>
                             <div class="contact-text">
                                 <h3>Address</h3>
-                                <p>123 Street, NY, USA</p>
+                                <p>123 Street, Gurugarm, India</p>
                             </div>
                         </div>
                     </div>
@@ -48,7 +48,7 @@
                             </div>
                             <div class="contact-text">
                                 <h3>Call Us</h3>
-                                <p>+012 345 6789</p>
+                                <p>+91 1234567890</p>
                             </div>
                         </div>
                     </div>
