--- a/template/login.html
+++ b/template/login.html
@@ -10,7 +10,7 @@
         width: 90%;
     }
     .main .container{
-        background-color: white !important;
+        background-color: rgb(254, 253, 253) !important;
         width: 60%;
     }
     .main{
@@ -21,12 +21,13 @@
         color:#666666 !important;
     }   
    #signin{
+    
        background:#719a0a;
    }
 </style>
 {% endblock %}
 {% block content %}
-    <div class="main">
+    <div class="main" style="background-image: url(https://wallpaperbat.com/img/684928-indian-food-and-indian-cuisine-dishes-copy-space-license-download-or-print-for-1364-photo.jpg);">
         <!-- Sing in  Form -->
         <section class="sign-in" style="padding-top:100px;">>
             <div class="container">
