--- a/template/index.html
+++ b/template/index.html
@@ -16,7 +16,7 @@
                                 savor the richness of flavours that only the best ingredients can provide.
                             </p>
                             <div class="carousel-btn">
-                                <a class="btn custom-btn" href="">View Menu</a>
+                                <a class="btn custom-btn" href="{% url 'all_dishes' %}">View Menu</a>
                             </div>
                         </div>
                     </div>
@@ -32,7 +32,7 @@
                                 dining experiences to unparallel heights
                             </p>
                             <div class="carousel-btn">
-                                <a class="btn custom-btn" href="">View Menu</a>
+                                <a class="btn custom-btn" href="{% url 'all_dishes' %}">View Menu</a>
                                 <a class="btn custom-btn" href="">Order Now!</a>
                             </div>
                         </div>
@@ -48,8 +48,8 @@
                                 Delivery Service!
                             </p>
                             <div class="carousel-btn">
-                                <a class="btn custom-btn" href="">View Menu</a>
-                                <a class="btn custom-btn" href="">Book Table</a>
+                                <a class="btn custom-btn" href="{% url 'all_dishes' %}">View Menu</a>
+                                <a class="btn custom-btn" href="{% url 'booking' %}">Book Table</a>
                             </div>
                         </div>
                     </div>
@@ -148,7 +148,7 @@
                                 Elevate your dining experience and create cherished moments, starting with a 
                                 hasslefree reservation process that puts you in control.
                             </p>
-                            <a class="btn custom-btn" href="">Book A Table</a>
+                            <a class="btn custom-btn" href="{% url 'booking' %}">Book A Table</a>
                         </div>
                     </div>
                     <div class="col-lg-7">
@@ -259,7 +259,7 @@
                     <ul class="nav nav-pills justify-content-center">
                         {% for category in menu %}
                             <li class="nav-item">
-                                <a class="nav-link" data-toggle="pill" href="#c-{{category.cat_id}}">{{category.cat_name}}</a>
+                                <a class="nav-link" data-toggle="pill" style="color: white;" href="#c-{{category.cat_id}}">{{category.cat_name}}</a>
                             </li>
                         {% endfor %}
                     </ul>
