--- a/template/index.html
+++ b/template/index.html
@@ -64,7 +64,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6">
                         <div class="about-img">
-                            <img src="/static/img/about.jpg" alt="Image">
+                            <img src="/static/img/aboutus.jpeg" alt="Image" height="450">
                             
                         </div>
                     </div>
@@ -236,7 +236,7 @@
                             <p>
                                 {{cat.description}}
                             </p>
-                            <a href="{% url 'all_dishes' %}?q={{cat.id}}">View Menu</a>
+                            <a href="{% url 'all_dishes' %}?q={{cat.id}}" style="color: #719a0a;">View Menu</a>
                         </div>
                     
                     </div>
@@ -277,11 +277,11 @@
                                             <img src="/media/{{item.image}}" alt="Image">
                                         </div>
                                         <div class="menu-text">
-                                            <h3><span><a href="{% url 'dish' id=item.id %}">{{item.name}}</a></span> 
+                                            <h3><span ><a style="color: #719a0a;" href="{% url 'dish' id=item.id %}">{{item.name}}</a></span> 
                                                 {% if item.price != item.discounted_price %}
-                                                 <strong><del>&dollar;{{item.price}}</del></strong>
+                                                 <strong><del>&#x20B9;{{item.price}}</del></strong>
                                                 {% endif %}
-                                                 <strong>&dollar;{{item.discounted_price}}</strong>
+                                                 <strong>&#x20B9;{{item.discounted_price}}</strong>
                                             </h3>
                                             <p>{{item.ingredients}}</p>
                                         </div>
