--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,7 @@
 /*******************************/
 body {
     color: #757575;
-    background: #ffffff;
+    background: #cdae7d;
     font-family: 'open sans', sans-serif;
 }
 
