--- a/template/booking.html
+++ b/template/booking.html
@@ -44,10 +44,19 @@
                     </div>
                     <div class="about-text">
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem.
+                            Embark on a culinary adventure as we take you on a journey around the world through food. From exotic 
+                            spices to traditional cooking techniques, discover the diverse flavors and cuisines that make our 
+                            planet so rich. Whether you're craving Italian pasta, Indian curry, or Japanese sushi, we'll guide 
+                            you to the best restaurants where you can book a table and savor authentic international dishes.
                         </p>
+                        <br>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem. Curabitur non nisl nec nisi scelerisque maximus. Aenean consectetur convallis porttitor. Aliquam interdum at lacus non blandit.
+                            This curated list showcases lesser-known dining establishments that offer exceptional food and 
+                            ambiance. From family-run eateries to trendy fusion kitchens, these hidden gems are waiting to be
+                            discovered by food lovers. Explore a world of flavours at your fingertips, ensuring a delightful
+                            dining experience awaits.
+                            Reserve your spot and savour the anitcipation of an exceptional meal in a setting tailored to your 
+                            taste.
                         </p>
                     </div>
                 </div>
