--- a/template/dashboard.html
+++ b/template/dashboard.html
@@ -152,7 +152,7 @@
                                             </div>
                                              <div class="col-md-8">
                                                 <h4>{{order.item.name}}</h4>
-                                                <p>&dollar; {{order.item.discounted_price}}</p>
+                                                <p>&#x20B9; {{order.item.discounted_price}}</p>
                                                 <p class="my-0"><small>INVOICE ID: {{order.invoice_id}}</small></p>
                                                 <p class="font-italic"><small>{{order.ordered_on}}</small></p>
                                              </div>  
