--- a/template/dish.html
+++ b/template/dish.html
@@ -29,9 +29,9 @@
                     </p>
                     <h4 class="menu-text" style="font-weight: normal;">
                         {% if dish.price != dish.discounted_price %}
-                            <strong><del>&dollar;{{dish.price}}</del></strong>
+                            <strong><del>&#x20B9;{{dish.price}}</del></strong>
                         {% endif %}
-                            <strong>&dollar;{{dish.discounted_price}}</strong>
+                            <strong>&#x20B9;{{dish.discounted_price}}</strong>
                     </h4>
                     <p>
                         <script>
