--- a/template/register.html
+++ b/template/register.html
@@ -77,12 +77,14 @@
                     </div>
                     <div class="form-group form-button">
                         <input type="submit" name="signup" id="signup" class="form-submit" value="Register"/>
-                        <a href="{% url 'login' %}" class="form-submit" >I am already member</a>
-
+                        <a href="{% url 'login' %}" class="form-submit" style="background-color: #719a0a;">I am already member</a>
                     </div>
                 </form>
             </div>
-           
+            <img src="https://i.fbcd.co/products/resized/resized-750-500/pantry-always-open-6080-1625828972021605400-c89fd3c991f455f506ee2dbab6dcbb6b29f421530173cb5d08b62e55d8fceff3.jpg" alt="image" height="200px" width="350px" >
+               
+
+            
                 
           
         </div>
