--- a/template/base.html
+++ b/template/base.html
@@ -28,7 +28,7 @@
       
     </head>
 
-    <body>
+    <body style="background-color: white;">
         <!-- Nav Bar Start -->
         <div class="navbar navbar-expand-lg bg-light navbar-light">
             <div class="container-fluid">
