--- a/template/index.html
+++ b/template/index.html
@@ -6,7 +6,7 @@
                 <div class="owl-carousel">
                     <div class="carousel-item">
                         <div class="carousel-img">
-                            <img src="/static/img/carousel-1.jpg" alt="Image">
+                            <img src="/static/img/maincourse.jpg" alt="Image">
                         </div>
                         <div class="carousel-text">
                             <h1>Best <span>Quality</span> Ingredients</h1>
@@ -22,7 +22,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="carousel-img">
-                            <img src="/static/img/carousel-2.jpg" alt="Image">
+                            <img src="/static/img/worldbestchef.jpg" alt="Image">
                         </div>
                         <div class="carousel-text">
                             <h1>World’s <span>Best</span> Chef</h1>
@@ -39,7 +39,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="carousel-img">
-                            <img src="/static/img/carousel-3.jpg" alt="Image">
+                            <img src="/static/img/delivery.jpg" alt="Image">
                         </div>
                         <div class="carousel-text">
                             <h1>Fastest Order <span>Delivery</span></h1>
@@ -313,7 +313,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="/static/img/team-1.jpg" alt="Image">
+                                <img src="/static/img/ranveer.jpg" alt="Image" width="200" height="250">
                                 <div class="team-social">
                                     <a href=""><i class="fab fa-twitter"></i></a>
                                     <a href=""><i class="fab fa-facebook-f"></i></a>
@@ -322,7 +322,7 @@
                                 </div>
                             </div>
                             <div class="team-text">
-                                <h2>Adam Phillips</h2>
+                                <h2>Ranveer Brar</h2>
                                 <p>Master Chef</p>
                             </div>
                         </div>
@@ -330,7 +330,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="/static/img/team-2.jpg" alt="Image">
+                                <img src="/static/img/Sanjeev-Kapoor.webp" alt="Image" width="200" height="250">
                                 <div class="team-social">
                                     <a href=""><i class="fab fa-twitter"></i></a>
                                     <a href=""><i class="fab fa-facebook-f"></i></a>
@@ -339,7 +339,7 @@
                                 </div>
                             </div>
                             <div class="team-text">
-                                <h2>Dylan Adams</h2>
+                                <h2>Sanjeev Kapoor</h2>
                                 <p>Master Chef</p>
                             </div>
                         </div>
@@ -347,7 +347,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="/static/img/team-3.jpg" alt="Image">
+                                <img src="/static/img/Madhur-Jaffrey.jpg" alt="Image" width="200" height="250">
                                 <div class="team-social">
                                     <a href=""><i class="fab fa-twitter"></i></a>
                                     <a href=""><i class="fab fa-facebook-f"></i></a>
@@ -356,7 +356,7 @@
                                 </div>
                             </div>
                             <div class="team-text">
-                                <h2>Jhon Doe</h2>
+                                <h2>Madhur Jaffrey</h2>
                                 <p>Master Chef</p>
                             </div>
                         </div>
@@ -364,7 +364,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="/static/img/team-4.jpg" alt="Image">
+                                <img src="/static/img/Vikas-Khanna.jpg" alt="Image" width="200" height="250"> 
                                 <div class="team-social">
                                     <a href=""><i class="fab fa-twitter"></i></a>
                                     <a href=""><i class="fab fa-facebook-f"></i></a>
@@ -373,7 +373,7 @@
                                 </div>
                             </div>
                             <div class="team-text">
-                                <h2>Josh Dunn</h2>
+                                <h2>Vikash Khanna</h2>
                                 <p>Master Chef</p>
                             </div>
                         </div>
